1/3/11 #3202, sim-sharing changes related to Swing controls
# 1.01.16 (59280) Dec 12, 2011
Added developer options to show/hide 2nd tab versions.
Fixed radio button multiple-clicking bug
Text change to "Show Outer Lone Pairs"
# 1.01.15 (59263) Dec 12, 2011
Removed "study" versions (for now). OK'ed with SR
Slight change to 2nd tab scale (compromise between small molecule angle visibility and large molecule terminal lone pair visibility)
Added terminal lone pairs
A few other bond length fixes
"Model" bond lengths on 2nd tab correspond to the "Real" bond lengths
Fixed a few obscure bugs
Fixed "Real" / "Model" swapping and rotation-matching for things like XeF2
Significantly improved angle-based repulsion for the "Real" molecules
Fixed "kit" radio button clicking bug
Added "Basics" support for 2nd tab
# 1.01.14 (59229) Dec 9, 2011
12/9/11 dev version for Mac testing
Added white background with black text for kit version of 2nd tab
Subscript fixes for kit version of 2nd tab
Tab handling fixes
# 1.01.13 (59114) Dec 6, 2011
12/6/11 Added Real / Model views and rotational matching between them, along with kit-version of 2nd tab
12/6/11 #3174, consolidated sim-sharing strings: put sim-specific strings in MoleculeShapesSimSharing, use common strings where appropriate
# 1.01.12 (58941) Nov 30, 2011
11/30/11 Interface progress for the "dropdown box" version of tab 2
# 1.01.11 (58797) Nov 25, 2011
11/25/11 Testing for 2nd tab
# 1.01.10 (58368) Nov 4, 2011
For the Colorado and Utah studies, enable the "less than" and "greater than" text.
# 1.01.09 (58349) Nov 4, 2011
Added a message for middle-button press, see #3136
# 1.01.08 (58345) Nov 3, 2011
Fixed threading issue for message sending when bonds created by dragging, see #3136
Changed "bondsRemoved" to "bondsChanged", see #3144
# 1.01.07 (58331) Nov 3, 2011
Added a message for background color change, see #3144
Report on both electron and molecule geometry when they change, see #3136
# 1.01.06 (58278) Nov 2, 2011