@@ -252,19 +252,19 @@ public class RealMoleculeShape {
     };
 
     public static final RealMoleculeShape[] TAB_2_MOLECULES = new RealMoleculeShape[] {
-            BERYLLIUM_CHLORIDE,
+            // CO2, H2O, SO2, XeF2, BF3, ClF3, NH3, CH4, SF4, XeF4, BrF5, PCl5, SF6
             CARBON_DIOXIDE,
-            BORON_TRIFLUORIDE,
-            SULFUR_DIOXIDE,
-            METHANE,
-            AMMONIA,
             WATER,
-            PHOSPHORUS_PENTACHLORIDE,
-            SULFUR_TETRAFLUORIDE,
-            CHLORINE_TRIFLUORIDE,
+            SULFUR_DIOXIDE,
             XENON_DIFLUORIDE,
-            SULFUR_HEXAFLUORIDE,
+            BORON_TRIFLUORIDE,
+            CHLORINE_TRIFLUORIDE,
+            AMMONIA,
+            METHANE,
+            SULFUR_TETRAFLUORIDE,
+            XENON_TETRAFLUORIDE,
             BROMINE_PENTAFLUORIDE,
-            XENON_TETRAFLUORIDE
+            PHOSPHORUS_PENTACHLORIDE,
+            SULFUR_HEXAFLUORIDE
     };
 }
