@@ -1,3 +1,6 @@
+Real/Model radio buttons horizontal on the dropdown tab
+Removed BeCl2
+Changed the ordering of molecules in the dropdown tab
 1/3/11 #3202, sim-sharing changes related to Swing controls
 # 1.01.16 (59280) Dec 12, 2011
 Added developer options to show/hide 2nd tab versions.
